# embedded-tsdb

./: .gitignore  Cargo.toml  README.md
crates/mvcc/: Cargo.toml
crates/types/: Cargo.toml
crates/types/src/: lib.rs
docs/: distributed-system.md  goals.md  raft-logs-algorithm.md  refs.md  tsdb-desgin.md
examples/: arrow_simple.rs
local-run/: Cargo.toml
